2010-03-19  Onkar Shinde  <onkarshinde@gmail.com>

	* installer.nsi.in: Don't use hard coded GTK version in message boxes.
	Add a generic function for checking existing GTK installations. Call it
	from init function.

2010-03-12  Onkar Shinde  <onkarshinde@gmail.com>

	* installer.nsi.in: Use the MUI method for setting icon for installer.
	Add functionality to embed GTK+ runtime installer. Changes derived from
	public domain script of GSmartControl.
	* pixmaps/gnusim8085_icon*: Delete old icon files.

2010-03-09  Onkar Shinde  <onkarshinde@gmail.com>

	* configure.in, NEWS: Start working on new release.
	* po/*.po, AUTHORS: Updated translations from launchpad.

2010-02-27  Onkar Shinde  <onkarshinde@gmail.com>

	* po/Makevars*: Change the bug reporting address in Makevars. Delete
	redundant Makevars.template.
	* po/gnusim8085.pot: Update to reflect the new bug reporting address.
	* po/*.po: Add BSD (3-Clause) license header where it was missing. Auto update
	of all files as per latest source.
	* po/Makefile.in.in: Don't update pot file when doing make dist to avoid
	the pot file header being overwritten. Don't include gmo files in
	distribution. Instead generate them at install time. Include COPYING file
	in distribution.
	* po/COPYING: Add file specifying the 3-Clause BSD license of translations.
	* installer.nsi.in: Add more languages to installer.
	* NEWS: Add prefix to bug numbers to indicate they are from sourceforge.net.

2010-02-14  Onkar Shinde  <onkarshinde@gmail.com>

	* configure.in pixmaps/*, GNUSim8085.desktop.in, installer.nsi.in,
	src/interface.c, AUTHORS: New icon.

2010-01-31  Onkar Shinde  <onkarshinde@gmail.com>

	* src/interface.c, src/callbacks.*: Add basic printing support for program
	editor as well.
	* po/gnusim8085.pot: Update to include the tooltip for newly added button.

2010-01-30  Onkar Shinde  <onkarshinde@gmail.com>

	* src/interface.c, src/callbacks.*: Introduce a toolbar button to show/hide